# repo-merger

./: .gitignore  CHANGELOG.md  HANDLERS.md  LICENSE  PLAN.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
repo_merger/: __init__.py  auto.py  cli.py  fragments.py  gitutils.py  handler_registry.py  inspection.py  merge.py  recovery.py  reporting.py  unhandled.py  workspace.py
repo_merger/handlers/: __init__.py
scripts/: move_invalid_repos.py  publish_repos.sh  setup_venv.sh
tests/: test_fragments.py  test_golden_pull.py  test_handler_registry.py  test_inspection.py  test_merge.py  test_recovery.py  test_reporting.py  test_scan.py  test_workspace.py
